Changed longname of plugin to clarify this is for Windows Mobile 5 and later.

26/03/2009 - 191400 Mark Ellis
------------------------------
Pass None as device name argument to new RAPISession constructor.

03/04/2009 - 123400 Mark Ellis
------------------------------
For device connected through hal, use iface_address property to create RRASession
only listening on our interface.

09/04/2009 - 202900 John Carr
------------------------------
Commit patch from Pawel Kot (via AdamW). Fixes some issues when syncing from WM to
places other than Evolution (e.g. nokia <-> wm). This has been in Mandriva for a while
without problems.

10/04/2009 - 150600 Mark Ellis
------------------------------
Get interface ip for RRASession from RAPISession.

14/04/2009 - 122700 Mark Ellis
------------------------------
For changes in pyrra, mostly throwing exceptions on errors.

10/07/2009 - 121100 Mark Ellis
------------------------------
Convert tests to python unittest framework, many thanks to Aurelien Bompard for this.
Tests can now be run using python-nose, with "nosetests -v tests".

16/07/2009 - 214900 Mark Ellis
------------------------------
0.14 release

02/09/2009 - Mark Ellis
-----------------------
Gracefully pass over IPv6 addresses in dtptserver, looking for an IPv4 address, many
thanks to Aurelien Bompard.

Proxy configuration for using dtptserver, thanks again to Aurelien Bompard.

Default busy status to OPAQUE if not given. Thanks to, yes, Aurelien Bompard.

17/09/2009 - Mark Ellis
-----------------------
Allow any case in type attribute of ADR tag, from Aurelien Bompard.

18/09/2009 - Aurelien Bompard
-----------------------------
Refactor the contact XSL stylesheets to use templates. Add many unit tests.

Small addition to the DTPT debug log

21/09/2009 - Aurelien Bompard
-----------------------------
Refactor the event XSL stylesheets to use templates.

02/12/2009 - Mark Ellis
-----------------------
Close some forgotten file descriptors in DTPTThread.